- Fix for bug #12383 and #14755: 105.05$ becomes 105.5$ (Patch by: Giancarlo   Niccolai <giancarlo@niccolai.org>)