ext/interbase/interbase.c
@@ -17,7 +17,7 @@
    +----------------------------------------------------------------------+
  */
 
-/* $Id: interbase.c,v 1.76 2002/03/01 14:03:10 derick Exp $ */
+/* $Id: interbase.c,v 1.77 2002/03/06 19:54:47 derick Exp $ */
 
 
 /* TODO: Arrays, roles?
@@ -594,7 +594,7 @@ PHP_MINFO_FUNCTION(ibase)
 
 	php_info_print_table_start();
 	php_info_print_table_row(2, "Interbase Support", "enabled");    
-	php_info_print_table_row(2, "Revision", "$Revision: 1.76 $");
+	php_info_print_table_row(2, "Revision", "$Revision: 1.77 $");
 #ifdef COMPILE_DL_INTERBASE
 	php_info_print_table_row(2, "Dynamic Module", "yes");
 #endif
@@ -1783,11 +1783,22 @@ static int _php_ibase_var_pval(pval *val, void *data, int type, int len, int sca
 			break;
 #ifdef SQL_INT64
 		case SQL_INT64:
-			Z_TYPE_P(val) = IS_STRING;
-			Z_STRLEN_P(val) = sprintf(string_data, "%Ld.%0*Ld",
-										 (ISC_INT64) (*((ISC_INT64 *)data) / (int) pow(10.0, (double) -scale)), -scale,
-										 (ISC_INT64) abs((int) (*((ISC_INT64 *)data) % (int) pow(10.0, (double) -scale))));
-			Z_STRVAL_P(val) = estrdup(string_data);
+			val->type = IS_STRING;
+
+			if (scale) {
+				int i, len;
+				char dt[20];
+				double number = (double) ((ISC_INT64) (*((ISC_INT64 *)data)));
+
+				number /= - 10 * scale;
+				sprintf(dt, "%%0.%df", -scale);
+				val->value.str.len = sprintf (string_data, dt, number);
+			} else {
+				val->value.str.len = sprintf (string_data, "%Ld",
+					(ISC_INT64) (*((ISC_INT64 *)data)));
+			}
+
+			val->value.str.val = estrdup(string_data);
 			break;
 #endif
 #ifndef SQL_TIMESTAMP
